syntax = "proto3";

package message;

import "annotations.proto";

option go_package = "/message";

message PullRequest {
  string recipient = 1;
}

message PullResponse {
  repeated Message messages = 1;
}

message Message {
  int32 id = 1;
  string sender = 2;
  string recipient = 3;
  string content = 4;
}

message SendMessageRequest {
  string sender = 1;
  string recipient = 2;
  string content = 3;
}

message SendMessageResponse {
  int32 id = 1;
  string sender = 2;
  string recipient = 3;
  string content = 4;
  Message message = 5; // Nested Message
}

message FetchMessagesRequest {
  string recipient = 1;
}

message FetchMessagesResponse {
  repeated Message messages = 1;
}

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {
    option (google.api.http) = {
      post: "/message/send"
      body: "*"
    };
  }

  rpc FetchMessages(FetchMessagesRequest) returns (FetchMessagesResponse) {
    option (google.api.http) = {
      get: "/message/fetch/{recipient}"
    };
  }
}
